21/2/24:
-Removed dead terrain code

20/2/24:
-Shaders and framebuffers no longer tied to a library

14/2/24:
-Rendering system overhaul ------
-- Individual renderpasses made into their own classes
-- Rendergraphs that renderpasses can be attached to and share resources within
-- SceneRenderer rewritten as a utility class

13/2/25:
-Asset manager rewrite, new asset serializer class
-Started SSAO pass, a bit buggy

26/1/25:
 -Scripting environment matches engine app environment more closely
 -Singletons now work in scripts as they're pointer-based
 -SceneRenderer is no longer a singleton
 -FullScreenTexture2D

24/1/25:
-Many things

29/12/24:
-VXGI looks a lot better

28/12/24:
-Support for loading embedded textures from meshes
-Faster mesh loading, base material serialization
-Separated bloom pass from scene renderer
-Other fixes/improvements

18/12/24:
-Scripting engine overhaul -------
-- Now cmake based and compiling occurs outside editor (still hot-reloadable), allows for using external libraries
-- ImGui and opengl rendering code can now be used inside scripts
-- Scripts split into header/implementation files so script classes can be referenced and used in other scripts
-- Changed how script class properties are exposed (faster, less memory usage)
-- Scripts have access to much more of the engine

-Fast entity UUID lookups
-More general fixes/improvements

19/9/24:
-Many bugfixes, stability improvements with different hardware

6/9/24:
-Custom component registration in scenes
-General fixes/minor changes

26/7/24:
-Changed how scene component systems work so they can now be added/removed in a modular way
-Allowed disabling of specific engine modules on engine start
-More window options
-General bugfixing/small other changes

12/7/24:
-Compressed shader package file generation for loading at runtime
-Binary asset packages now support all asset types except scripts
-Added snappy submodule for compression

11/7/24: