@@ -22,6 +22,14 @@ namespace ORNG {
 		void OnImGuiRender(bool enable_typing);
 		sol::state& GetLua() { return lua; }
 
+		struct LuaResult {
+			LuaResult(std::string_view _content, bool _error) : content(_content), is_error(_error) {};
+			std::string content;
+			bool is_error;
+		};
+
+		LuaResult Execute(const std::string& lua_cmd);
+
 		std::vector<std::function<void()>> input_callbacks;
 
 		glm::vec2 render_pos{ 0, 0 };
