@@ -1,3 +1,6 @@
+23/2/24:
+-Editor console
+
 21/2/24:
 -Removed dead terrain code
 
